--- a/public/game/css/rest.css
+++ b/public/game/css/rest.css
@@ -127,5 +127,5 @@ box-shadow: 10px 10px 61px 0px rgba(0,0,0,0.37);
     background-size: 100px;
     background-repeat: no-repeat;
     background-position: center center;
-
+    display: none;
 }
